Entendendo os modificadores de acesso, tendo exemplos de assinatura e entendendo como funcionam cada.

--- a/force-app/main/default/classes/ClassPublic.cls
+++ b/force-app/main/default/classes/ClassPublic.cls
@@ -1,12 +1,11 @@
 /**
- * @description       : 
- * @last modified on  : 04-30-2025
+ * @description       : Modificador de Acesso - Public
+ * @last modified on  : 05-01-2025
  * @last modified by  : Alessandro Souza
- * @about             : Modificador de Acesso - Public
 **/
 
-public with sharing class ClassPublic {
+public class ClassPublic {
     public ClassPublic() {
-
+        // Conteúdo da Classe
     }
 }
