--- a/force-app/main/default/classes/ClassGlobal.cls
+++ b/force-app/main/default/classes/ClassGlobal.cls
@@ -1,5 +1,10 @@
-public with sharing class ClassGlobal {
-    public ClassGlobal() {
-
+/**
+ * @description       : Modificador de Acesso - Global
+ * @last modified on  : 05-01-2025
+ * @last modified by  : Alessandro Souza
+**/
+global with sharing class ClassGlobal {
+    global ClassGlobal() {
+        // Corpo da Classe
     }
 }
