--- a/force-app/main/default/classes/ClassPrivate.cls
+++ b/force-app/main/default/classes/ClassPrivate.cls
@@ -1,5 +1,11 @@
-public with sharing class ClassPrivate {
-    public ClassPrivate() {
+/**
+ * @description       : Modificador de Acesso - Private
+ * @last modified on  : 05-01-2025
+ * @last modified by  : Alessandro Souza
+**/
 
+public class ClassPrivate {
+    private ClassPrivate() {
+        // Corpo da Classe
     }
 }
