--- a/force-app/main/default/classes/ClassProtected.cls
+++ b/force-app/main/default/classes/ClassProtected.cls
@@ -1,5 +1,12 @@
-public with sharing class ClassProtected {
-    public ClassProtected() {
+/**
+ * @description       : Modificador de Acesso - Protected
+ * @last modified on  : 05-01-2025
+ * @last modified by  : Alessandro Souza
+**/
+public virtual class ClassProtected {
+    public ClassProtected() { }
 
+    protected void makeSound(){
+        System.debug('Sons de Ventos');
     }
 }
