Entendendo como funciona a classe global Database e vendo alguns métodos.

--- a/force-app/main/default/classes/SystemClass.cls
+++ b/force-app/main/default/classes/SystemClass.cls
@@ -1,3 +1,8 @@
+/**
+ * @description       : Classe global System
+ * @last modified on  : 05-16-2025
+ * @last modified by  : Alessandro Souza
+**/
 public with sharing class SystemClass {
     // https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_system.htm#apex_System_System_enqueueJob
     public void doDebug(){
